Fixed lobby callout bubble getting cut off.

--- a/assets/css/application.styl
+++ b/assets/css/application.styl
@@ -1404,6 +1404,10 @@ room-content-margin-height = 10px
 
   transition left .2s ease-out
 
+  &.lobby
+    // In the lobby, we show callouts that overflow.
+    overflow visible
+
 .toggle-sidebar-tab
   display none
 
